Fix a bug where text had the wrong color

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -509,6 +509,7 @@ img.menu-category-icon {
 
 .menu-content-wrapper {
     padding: 10px;
+    color: white;
 }
 
 #advancedTransluencyOptionsWrapper {
